Add GitHub token for deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          github_token: ${{ secrets.GH_ACTIONS_TOKEN }}
           branch: gh-pages
           folder: dist
