--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ permissions:
 on:
   push:
     branches:
-      - main
+      - wagmi@1
 jobs:
   deploy:
     concurrency: ci-${{ github.ref }}
@@ -21,5 +21,5 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
+          folder: dist/v1
           clean: true
