--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@intellax/ix-ethereum-connector": "2.0.0",
-    "@tanstack/react-query": "5.17.9",
+    "@intellax/ix-ethereum-connector": "2.1.5",
+    "@tanstack/react-query": "5.51.1",
+    "@web3modal/wagmi": "5.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "2.17.4",
+    "wagmi": "2.10.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.39",
